gör om strukturen i css-mappen

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -5,5 +5,8 @@ $background-color: #F5EFEB;
 $black-text: #000;
 $light-text: lighten(#F5EFEB, 10%);
 
+/* motsatsfärger till mörkt tema */
+
+
 /* fonts */
 $font-stack: 'Arial', sans-serif;
