--- a/src/css/_index.scss
+++ b/src/css/_index.scss
@@ -1,1 +1,7 @@
 /* index-page styles */
+@use "mixins";
+
+img {
+    @include mixins.box-shadow(0px, 0px, 25px, 8px, rgba(0, 0, 0, 0.5));
+    margin: 2rem;
+}
