gör om mapp/fil-strukturen för sass

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,12 +1,17 @@
 /* base */
-@use "base";
+@use "./base/base";
+@use "./base/reset";
 
 /* components */
-@use "button";
+@use "./components/button";
 
 /* layout */
-@use "layout"; 
+@use "./layout/layout";
+@use "./layout/header";
+@use "./layout/footer";
+@use "./layout/navigation";
+
 
 /* pages */
-@use "index";
-@use "SASS"; 
+@use "./pages/index";
+@use "./pages/SASS";
