index-sidan får innehåll och design för mobilversion

--- a/src/css/pages/_index.scss
+++ b/src/css/pages/_index.scss
@@ -1,7 +1,17 @@
 /* index-page styles */
 @use "../abstracts/placeholders";
 
-img {
+.images {
     @extend %box-shadow;
-    margin: 2rem;
+    width: 80%;
+    margin: 0 auto 0.8rem;
+}
+
+.image-box {
+    @extend %centermargin;
+    
+    p {
+        @extend .images;
+        box-shadow: none;
+    }
 }
