--- a/src/css/pages/_SASS.scss
+++ b/src/css/pages/_SASS.scss
@@ -1,1 +1,9 @@
 /* sass discussion page */
+@use "../abstracts/mixins";
+@use "../abstracts/placeholders";
+@use "../abstracts/variables";
+
+.sass-content {
+    @include mixins.textBox(90%, 0 1rem 1rem, 1rem auto, 1px solid rgba(0, 0, 0, 0.5));
+    @extend %box-shadow
+}
