placeholders för boxskugga och centrera text

--- a/src/css/abstracts/_placeholders.scss
+++ b/src/css/abstracts/_placeholders.scss
@@ -1,3 +1,11 @@
+@use "../abstracts/variables";
+
+/* placeholders for inheritance */
 %box-shadow {
     box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
+}
+
+%centermargin {
+    text-align: center;
+    margin-top: 1rem;
 }
