--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -6,9 +6,10 @@ $dark-text: #000;
 $light-text: #f1edea;
 
 /* motsatsfärger till mörkt tema */
-$dark-header-color: darken(#2F4156, 20%);
-$dark-background: #2d2d2d;
+$dark-header-color: darken(#2F4156, 17%);
+$dark-background: #505050;
 $dark-text: #fff;
+$text-background: lighten(#505050, 10%);
 
 /* fonts */
 $font-stack: 'Arial', sans-serif;
