--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,8 @@
+/* abstracts */
+@use "./abstracts/mixins";
+@use "./abstracts/placeholders";
+@use "./abstracts/variables";
+
 /* base */
 @use "./base/base";
 @use "./base/reset";
