--- a/src/css/pages/_SASS.scss
+++ b/src/css/pages/_SASS.scss
@@ -6,5 +6,12 @@
 .sass-content {
     @include mixins.textBox(90%, 0 1rem 1rem, 1rem auto, 2px solid rgb(137, 137, 137));
     @extend %box-shadow;
-    max-width: variables.$breakpoint;
 }
+
+/* style för större skärmar */
+@media (min-width: variables.$breakpoint) {
+    .sass-content {
+      max-width: variables.$breakpoint;
+      padding: 1rem 3rem;
+    }
+  }
