städar och organiserar filstrukturen

--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -2,13 +2,13 @@
 /* colors */
 $header-color: #2F4156;
 $background-color: #F5EFEB;
-$dark-text: #000;
+$black: #000;
 $light-text: #f1edea;
 
 /* motsatsfärger till mörkt tema */
 $dark-header-color: darken(#2F4156, 17%);
 $dark-background: #505050;
-$dark-text: #fff;
+$white: #fff;
 $text-background: lighten(#505050, 10%);
 
 /* fonts */
