--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,9 +12,8 @@
 @use "./components/menuBtns"; 
 
 /* layout */
-@use "./layout/header";
-@use "./layout/footer";
-@use "./layout/navigation";
+@use "./layout/layout";
+@use "./layout/mediaqueries";
 
 
 /* pages */
