tar bort knapp-filen som raderats

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,8 +8,7 @@
 @use "./base/reset";
 
 /* components */
-@use "./components/button";
-@use "./components/menuBtns"; 
+@use "./components/buttons"; 
 
 /* layout */
 @use "./layout/layout";
