Lägger till variabel

--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -14,5 +14,8 @@ $text-background: lighten(#505050, 10%);
 /* fonts */
 $font-stack: 'Arial', sans-serif;
 
+/* default padding */
+$default-padding: 1rem;
+
 /* breakpoints */
 $breakpoint: 50rem;
