--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -17,5 +17,8 @@ $font-stack: 'Arial', sans-serif;
 /* default padding */
 $default-padding: 1rem;
 
+/* max width button */
+$max-button: 25rem;
+
 /* breakpoints */
 $breakpoint: 50rem;
