--- a/src/css/components/_buttons.scss
+++ b/src/css/components/_buttons.scss
@@ -54,6 +54,7 @@
     top: -3px;
 }
 
+/* knapp på index-sidan */
 .button {
-   @include mixins.button(variables.$header-color, variables.$light-text, variables.$default-padding, 0 40%, center, 1.2rem, false) 
+   @include mixins.button(variables.$header-color, variables.$light-text, variables.$default-padding, 0 auto, variables.$max-button, center, 1.2rem, false) 
 }
