--- a/src/css/layout/_mediaqueries.scss
+++ b/src/css/layout/_mediaqueries.scss
@@ -67,11 +67,15 @@
     }
 
     .button {
-        @include mixins.button(variables.$dark-header-color, variables.$white, variables.$default-padding, 0 40%, center, 1.2rem, true)
+        @include mixins.button(variables.$dark-header-color, variables.$white, variables.$default-padding, 0 auto, variables.$max-button, center, 1.2rem, true)
     }
 
     .sass-content {
         background-color: variables.$text-background;
         border-color: variables.$light-text;
+    }
+
+    img {
+        opacity: 80%;
     }
 }
