ändrar i mixin för grid

--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -15,8 +15,8 @@ body {
 }
 
 h1 {
-    font-size: 2rem;
-    margin-left: 1rem;
+    font-size: 1.8rem;
+    margin: auto 2rem;
 
     a {
         color: variables.$light-text;
