--- a/src/css/layout/_mediaqueries.scss
+++ b/src/css/layout/_mediaqueries.scss
@@ -66,7 +66,7 @@
     }
 
     .button {
-        @include mixins.button(variables.$dark-header-color, variables.$white, variables.$default-padding, 0 auto, variables.$max-button, center, 1.2rem, true)
+        @include mixins.button(variables.$dark-header-color, variables.$white, variables.$default-padding, 0 auto, variables.$max-button, center, 1.2rem, true);
     }
 
     .sass-content {
