Organiserar om i SASS-filer

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -1,6 +1,6 @@
-@use "../abstracts/variables";
-@use "../abstracts/placeholders";
-@use "../abstracts/mixins";
+@use "./abstracts/variables";
+@use "./abstracts/placeholders";
+@use "./abstracts/mixins";
 
 /* menu icon */
 /* hamburgermeny */
