--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,5 +1,5 @@
-@use "../abstracts/variables";
-@use "../abstracts/placeholders";
+@use "./abstracts/variables";
+@use "./abstracts/placeholders";
 
 /* reset */
 * {
