--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,16 +4,14 @@
 @use "./abstracts/variables";
 
 /* base */
-@use "./base/base";
+@use "base";
 
 /* components */
-@use "./components/buttons"; 
+@use "buttons"; 
 
 /* layout */
 @use "./layout/layout";
 @use "./layout/mediaqueries";
 
-
 /* pages */
-@use "./pages/index";
-@use "./pages/SASS";
+@use "pages";
