--- a/src/css/_pages.scss
+++ b/src/css/_pages.scss
@@ -10,10 +10,6 @@
     margin: 0 auto 0.8rem;
 }
 
-.images:hover {
-    animation: hoverEffect 3s forwards;
-}
-
 .image-box {
     @extend %centermargin;
 
@@ -31,3 +27,54 @@
 }
 
 /* animation page */
+#A-h2 {
+    font-size: 2rem;
+    margin: 2rem;
+    animation: textShadow 6s 4s forwards linear;
+}
+
+.box {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    margin: 4rem auto;
+    background-color: variables.$header-color;
+    animation: moveIn 4s forwards linear;
+}
+
+.golf-animation {
+    @include mixins.textBox(65%, 1rem, 2rem auto);
+    background-color: lighten(variables.$header-color, 40%);
+    text-align: center;
+    animation: shadowEffect 3s infinite alternate;
+
+    .golfclub,
+    .golfball {
+        animation: none;
+    }
+
+    .golfball {
+        transform: translate(-190px, -30px);
+    }
+
+    &.animate {
+        .golfclub {
+            animation: rotateObject 6s infinite alternate linear;
+        }
+
+        .golfball {
+            animation: moveBall 6s 3.43s infinite alternate linear;
+        }
+    }
+}
+
+.a-btn {
+    @include mixins.button(variables.$header-color, variables.$light-text, 1rem 2rem, 2rem auto, variables.$max-button, center, 1.2rem, false);
+    transform: scale(1);
+    transition: transform 1s ease, background-color 1s ease;
+
+    &:hover {
+        transform: scale(1.25);
+        background-color: lighten(variables.$header-color, 40%);
+    }
+}
