lägger till ljusblå färg

--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 /* variables */
 /* colors */
 $header-color: #2F4156;
+$light-blue: lighten(#2F4156, 20%);
 $background-color: #F5EFEB;
 $black: #000;
 $light-text: #f1edea;
