Lägger till variabler för färger

--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -12,6 +12,11 @@ $dark-background: lighten(#505050, 5%);
 $white: #fff;
 $text-background: #505050;
 
+/* other colors */
+$orange: #d9aa65;
+$yellow: rgb(247, 247, 60);
+$red: rgb(196, 0, 0);
+
 /* fonts */
 $font-stack: 'Arial', sans-serif;
 
