--- a/src/css/abstracts/_keyframes.scss
+++ b/src/css/abstracts/_keyframes.scss
@@ -47,11 +47,15 @@
 
 @keyframes zoomIn {
     0% {
-        transform: scale(1)
+        transform: scale(1) translate(-100px);
+    }
+
+    50% {
+        transform: scale(1.25) translate(0px);
     }
 
     100% {
-        transform: scale(1.25);
+        transform: scale(1) translate(100px);
     }
 }
 
@@ -162,7 +166,7 @@
     }
 
     100% {
-        transform: translate(30rem, -220px) rotate(-1000deg);
+        transform: translate(50rem, -220px) rotate(-1000deg);
     }
 }
 
