--- a/src/css/_pages.scss
+++ b/src/css/_pages.scss
@@ -72,6 +72,7 @@
     input {
         width: 100%;
         height: 1.8rem;
+        padding-left: 0.5rem;
         border-radius: 0.375rem;
         border: 1px solid variables.$header-color;
         grid-row: 2;  
