--- a/src/css/_pages.scss
+++ b/src/css/_pages.scss
@@ -54,7 +54,7 @@
 #map {
     height: 400px;
     @extend %box-shadow;
-    margin-bottom: 3rem;
+    margin-bottom: 4rem;
 }
 
 #searchForm {
@@ -62,6 +62,7 @@
     grid-template-columns: 80% 20%;
     margin: 2rem auto;
     padding: 0 1rem;
+    max-width: 30rem;
 
     label {
         width: 100%;
